versions/v0.18/modules/en/pages/changelogs/changelogs/v0.18.0.adoc
= "v0.18.0"
:description: Review the v0.18.0 release notes to find bug fixes, provider updates, and ClusterClass improvements for Rancher Turtles
:revdate: 2026-09-02
:page-revdate: {revdate}

== Description

Release Date: 2025-03-31

This release of Rancher Turtles focuses on:

* Centralizing ClusterClass management and applications lifecycle management using Cluster API Addon Provider Fleet.
* Improving validation and test coverage of ClusterClass examples for various providers in end to end tests.
* Updated several providers version to include latest bug fixes and features.

=== Bug Fixes

* Rollback ngrok-operator version by @anmazzotti in https://github.com/rancher/turtles/pull/1123[#1123].
* test: set gcp region before executing test suite by @salasberryfin in https://github.com/rancher/turtles/pull/1122[#1122].
* test: Ensure CAPV tests have the correct providers set up by @yiannistri in https://github.com/rancher/turtles/pull/1127[#1127].
* Rename CPI_IMAGE_VERSION variable to CPI_IMAGE_K8S_VERSION by @furkatgofurov7 in https://github.com/rancher/turtles/pull/1128[#1128].
* Add new secret for internal Rancher domain by @yiannistri in https://github.com/rancher/turtles/pull/1187[#1187].
* Fix message for pr/issue workflows by @alexander-demicev in https://github.com/rancher/turtles/pull/1189[#1189].
* Add manual migration of fleet agent between namespaces by @Danil-Grigorev in https://github.com/rancher/turtles/pull/1191[#1191].
* CAPI-UI installation fix by @cpinjani in https://github.com/rancher/turtles/pull/1208[#1208].
* Keep fleet addon CAPIProvider name by @Danil-Grigorev in https://github.com/rancher/turtles/pull/1214[#1214].
* Fix missing AWS EC2 ConfigMaps by @anmazzotti in https://github.com/rancher/turtles/pull/1218[#1218].
* Fix nightly GHA inputs referenced in e2e_import_gitops_v3 test by @furkatgofurov7 in https://github.com/rancher/turtles/pull/1221[#1221].

=== Other Changes

* Wait for rancher kubeconfig to be fetched in e2e by @alexander-demicev in https://github.com/rancher/turtles/pull/1117[#1117].
* chore(deps): Bump https://www.google.com/search?q=https%3A%2F%2Fgithub.com%2Fonsi%2Fginkgo%2Fv2[github.com/onsi/ginkgo/v2] from 2.22.2 to 2.23.0 in /exp/clusterclass in the dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1124[#1124].
* chore(deps): Bump the dependencies group with 2 updates by @dependabot in https://github.com/rancher/turtles/pull/1125[#1125].
* chore(deps): Bump https://www.google.com/search?q=https%3A%2F%2Fgithub.com%2Fgo-git%2Fgo-git%2Fv5[github.com/go-git/go-git/v5] from 5.13.2 to 5.14.0 in /test in the test-dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1116[#1116].
* Bump versions of k8s, Rancher and tooling dependencies by @furkatgofurov7 in https://github.com/rancher/turtles/pull/1102[#1102].
* Fix docker rke2 e2e template by @anmazzotti in https://github.com/rancher/turtles/pull/1131[#1131].
* [updatecli] Bump CAPI Providers versions by @github-actions in https://github.com/rancher/turtles/pull/1132[#1132].
* Disable CAPRKE2 auto-import test due to issues with available space by @Danil-Grigorev in https://github.com/rancher/turtles/pull/1134[#1134].
* Add Azure + RKE2 ClusterClass example by @anmazzotti in https://github.com/rancher/turtles/pull/1121[#1121].
* ci: Add workflow for self-hosted runner by @yiannistri in https://github.com/rancher/turtles/pull/1129[#1129].
* ci: Add missing CAPV template vars by @yiannistri in https://github.com/rancher/turtles/pull/1135[#1135].
* chore(deps): Bump golang.org/x/net from 0.35.0 to 0.36.0 in /exp/clusterclass by @dependabot in https://github.com/rancher/turtles/pull/1136[#1136].
* Add Rancher Turtles quickstart script by @mjura in https://github.com/rancher/turtles/pull/1111[#1111].
* chore(deps): Bump golang.org/x/net from 0.35.0 to 0.36.0 in /test by @dependabot in https://github.com/rancher/turtles/pull/1139[#1139].
* chore(deps): Bump sigs.k8s.io/cluster-api-operator from 0.17.0 to 0.17.1 in the dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1140[#1140].
* chore(deps): Bump golang.org/x/net from 0.35.0 to 0.36.0 in /exp/day2 by @dependabot in https://github.com/rancher/turtles/pull/1138[#1138].
* chore(deps): Bump golang.org/x/net from 0.35.0 to 0.36.0 by @dependabot in https://github.com/rancher/turtles/pull/1137[#1137].
* Clarify e2e workspace setup by @anmazzotti in https://github.com/rancher/turtles/pull/1141[#1141].
* Fixing Rancher condition check when Ngrok by @mjura in https://github.com/rancher/turtles/pull/1143[#1143].
* Add AWS EC2 Kubeadm clusterclass to e2e by @alexander-demicev in https://github.com/rancher/turtles/pull/1112[#1112].
* chore(deps): Bump golangci/golangci-lint-action from 6.5.0 to 6.5.1 by @dependabot in https://github.com/rancher/turtles/pull/1146[#1146].
* [updatecli] Bump CAPI Providers versions by @github-actions in https://github.com/rancher/turtles/pull/1145[#1145].
* chore(deps): Bump aquasecurity/trivy-action from 0.29.0 to 0.30.0 by @dependabot in https://github.com/rancher/turtles/pull/1147[#1147].
* chore(deps): Bump sigs.k8s.io/cluster-api-operator/test from 0.17.0 to 0.17.1 in /test in the test-dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1148[#1148].
* Set GH_TOKEN env variable to properly generate RELEASE_NOTES.md file by @furkatgofurov7 in https://github.com/rancher/turtles/pull/1153[#1153].
* Add Azure + RKE2 ClusterClass e2e test by @anmazzotti in https://github.com/rancher/turtles/pull/1142[#1142].
* ci: use self hosted runner by @anmazzotti in https://github.com/rancher/turtles/pull/1133[#1133].
* chore(deps): Bump sigs.k8s.io/cluster-api from 1.9.5 to 1.9.6 in /exp/clusterclass in the dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1159[#1159].
* Switch CAPD+Kubeadm test to clusterclass in e2e by @valaparthvi in https://github.com/rancher/turtles/pull/1158[#1158].
* Add AKS ClusterClass example by @anmazzotti in https://github.com/rancher/turtles/pull/1160[#1160].
* Switch CAPD+RKE2 e2e template to clusterclass by @alexander-demicev in https://github.com/rancher/turtles/pull/1155[#1155].
* [updatecli] Bump CAPI Providers versions by @github-actions in https://github.com/rancher/turtles/pull/1164[#1164].
* chore(deps): Bump https://www.google.com/search?q=https%3A%2F%2Fgithub.com%2Fonsi%2Fginkgo%2Fv2[github.com/onsi/ginkgo/v2] from 2.23.0 to 2.23.1 in /exp/clusterclass in the dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1166[#1166].
* chore(deps): Bump https://www.google.com/search?q=https%3A%2F%2Fgithub.com%2Fonsi%2Fginkgo%2Fv2[github.com/onsi/ginkgo/v2] from 2.23.0 to 2.23.1 in the dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1165[#1165].
* Refactor e2e cleanup behavior for SKIP_RESOURCE_CLEANUP and SkipDeletionTest by @valaparthvi in https://github.com/rancher/turtles/pull/1161[#1161].
* chore(deps): Bump https://www.google.com/search?q=https%3A%2F%2Fgithub.com%2Fonsi%2Fginkgo%2Fv2[github.com/onsi/ginkgo/v2] from 2.23.1 to 2.23.2 in /exp/clusterclass in the dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1174[#1174].
* Add clusterName in GCPManagedControlPlaneSpec e2e template by @cpinjani in https://github.com/rancher/turtles/pull/1175[#1175].
* Embed example clusterclasses in e2e suite by @alexander-demicev in https://github.com/rancher/turtles/pull/1170[#1170].
* chore(deps): Bump https://www.google.com/search?q=https%3A%2F%2Fgithub.com%2Fonsi%2Fginkgo%2Fv2[github.com/onsi/ginkgo/v2] from 2.23.1 to 2.23.2 in the dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1173[#1173].
* Fix e2e Cluster deletion failures by @anmazzotti in https://github.com/rancher/turtles/pull/1169[#1169].
* chore(deps): Bump golangci/golangci-lint-action from 6.5.1 to 6.5.2 by @dependabot in https://github.com/rancher/turtles/pull/1181[#1181].
* chore(deps): Bump actions/setup-go from 5.3.0 to 5.4.0 by @dependabot in https://github.com/rancher/turtles/pull/1180[#1180].
* chore(deps): Bump the test-dependencies group in /test with 2 updates by @dependabot in https://github.com/rancher/turtles/pull/1178[#1178].
* chore(deps): Bump the dependencies group in /exp/clusterclass with 2 updates by @dependabot in https://github.com/rancher/turtles/pull/1182[#1182].
* chore(deps): Bump the dependencies group with 2 updates by @dependabot in https://github.com/rancher/turtles/pull/1179[#1179].
* Ensure PR/Issues have labels and description by @alexander-demicev in https://github.com/rancher/turtles/pull/1168[#1168].
* Organize dependabot groups by @alexander-demicev in https://github.com/rancher/turtles/pull/1183[#1183].
* Use Calico CNI and Azure CCM for Azure e2e by @Danil-Grigorev in https://github.com/rancher/turtles/pull/1171[#1171].
* Add new management cluster environment option by @yiannistri in https://github.com/rancher/turtles/pull/1163[#1163].
* [updatecli] Bump CAPI Providers versions by @github-actions in https://github.com/rancher/turtles/pull/1190[#1190].
* Bump CAAPF to latest by @Danil-Grigorev in https://github.com/rancher/turtles/pull/1185[#1185].
* [updatecli] Bump CAPI Providers versions by @github-actions in https://github.com/rancher/turtles/pull/1202[#1202].
* Use HelmApp for installing Calico on example Class by @anmazzotti in https://github.com/rancher/turtles/pull/1203[#1203].
* [updatecli] Bump CAPI Providers versions by @github-actions in https://github.com/rancher/turtles/pull/1216[#1216].
* [updatecli] Bump CAPI Providers versions by @github-actions in https://github.com/rancher/turtles/pull/1220[#1220].
* chore(deps): Bump the other-dependencies group in /test with 3 updates by @dependabot in https://github.com/rancher/turtles/pull/1224[#1224].
* chore(deps): Bump https://www.google.com/search?q=https%3A%2F%2Fgithub.com%2Francher%2Fcluster-api-provider-rke2[github.com/rancher/cluster-api-provider-rke2] from 0.12.0 to 0.13.0 in /exp/day2 in the provider-dependencies group by @dependabot in https://github.com/rancher/turtles/pull/1225[#1225].
* Bump CAAPF to version v0.7.4 by @Danil-Grigorev in https://github.com/rancher/turtles/pull/1230[#1230].

=== Full Changelog: 

Review the full list of changes: https://github.com/rancher/turtles/compare/v0.17.0%E2%80%A6v0.18.0[v0.17.0...v0.18.0]

== Download

[cols="3,1,1" options="header" frame="all" grid="rows"]
|===
| Name | Created At | Updated At

| https://github.com/rancher/turtles/releases/download/v0.18.0/rancher-turtles-0.18.0.tgz[rancher-turtles-0.18.0.tgz] | 2025-03-31 | 2025-03-31

|===

__Information retrieved from https://github.com/rancher/turtles/releases/tag/v0.18.0[v0.18.0 GitHub release].__